# FIND_Delft_Assignment

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: tests.yml
colab/: README.md
notebooks/: ddim_experiment.ipynb  test_ddim_sapmler.ipynb
scripts/: README.md  schedule.sh
src/find_delft_assignment/: __init__.py  checkpoints.py  config.py
src/find_delft_assignment/cli/: sample.py
src/find_delft_assignment/metrics/: __init__.py  basic.py
src/find_delft_assignment/model/: __init__.py  pretrained.py  unet.py
src/find_delft_assignment/sampling/: __init__.py  common.py  ddim.py  ddpm.py  scheduler.py
src/find_delft_assignment/utils/: __init__.py
src/find_delft_assignment/visualisation/: __init__.py  grids.py
tests/: test_ddim_scheduler_adapter.py
