[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "find-delft-assignment"
version = "0.1.0"
description = "DDIM sampling on a pretrained DDPM (FIND Delft assignment skeleton)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pillow>=10",
  "torch>=2.0",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]
colab = ["jupyter>=1.0", "matplotlib>=3.7"]

[project.scripts]
find-delft-sample = "find_delft_assignment.cli.sample:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
